--- a/TabBar App/Views/Base.lproj/LaunchScreen.storyboard
+++ b/TabBar App/Views/Base.lproj/LaunchScreen.storyboard
@@ -24,7 +24,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemGrayColor"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstItem="mH3-q7-w8f" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="4AH-3V-4eL"/>
                             <constraint firstItem="mH3-q7-w8f" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="jIF-1i-jwy"/>
@@ -37,8 +37,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
